tests/neg-custom-args/captures/freeze-double-flip.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/freeze-double-flip.scala:15:4 ----------------------------
15 |    (x: Ref^) => (op: Ref^ => IRef) => op(x) // error
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |    Found:    Ref^ -> (Ref^ => IRef) -> IRef
   |    Required: scala.caps.Mutable | Array[?]
   |
   | longer explanation available when compiling with `-explain`
